Center mock layout and align fallbacks

--- a/golf_mobile.html
+++ b/golf_mobile.html
@@ -193,14 +193,23 @@
       box-sizing: border-box;
     }
 
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
-      background: radial-gradient(circle at 15% 20%, #172554 0%, #0b1327 30%, #020617 70%);
-      color: #e2e8f0;
-      min-height: 100vh;
-      padding: 16px 14px 22px;
-    }
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
+        background: radial-gradient(circle at 15% 20%, #172554 0%, #0b1327 30%, #020617 70%);
+        color: #e2e8f0;
+        min-height: 100vh;
+        padding: 16px 14px 22px;
+        display: flex;
+        justify-content: center;
+      }
+
+      .app {
+        width: 100%;
+        max-width: 420px;
+        display: flex;
+        flex-direction: column;
+      }
 
     .status-bar {
       display: grid;
@@ -393,8 +402,9 @@
     }
   </style>
 </head>
-<body>
-  <div class="status-bar">
+  <body>
+    <div class="app">
+      <div class="status-bar">
     <span class="time">09:41</span>
     <span class="pill">Stripe Golf · Live</span>
     <span style="text-align: right;">LTE · 85%</span>
@@ -463,9 +473,10 @@
     </div>
   </div>
 
-  <div class="footer-note">Интерфейс оптимизирован под рамку iPhone в обёртке golf_mobile.html</div>
-</body>
-</html>
+      <div class="footer-note">Интерфейс оптимизирован под рамку iPhone в обёртке golf_mobile.html</div>
+    </div>
+  </body>
+  </html>
 
   </template>
 
