--- a/index.html
+++ b/index.html
@@ -2,6 +2,186 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <title>Stripe Golf — Мобильный прототип</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+    }
+
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
+        sans-serif;
+      background: radial-gradient(circle at top, #0f172a 0, #020617 55%, #020617 100%);
+      color: #e5e7eb;
+    }
+
+    .phone-shell {
+      width: 430px;
+      max-width: 100%;
+      aspect-ratio: 430 / 820;
+      border-radius: 42px;
+      background: linear-gradient(145deg, #020617, #0b1220);
+      padding: 6px;
+      box-shadow:
+        0 50px 120px rgba(15, 23, 42, 0.9),
+        0 0 0 1px rgba(148, 163, 184, 0.55);
+      position: relative;
+      display: flex;
+      align-items: stretch;
+      justify-content: stretch;
+    }
+
+    .phone-inner {
+      border-radius: 34px;
+      overflow: hidden;
+      background: #000;
+      flex: 1;
+      position: relative;
+      box-shadow: 0 0 0 1px rgba(15, 23, 42, 0.95);
+    }
+
+    .phone-notch {
+      position: absolute;
+      top: 8px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 160px;
+      height: 26px;
+      border-radius: 16px;
+      background: #020617;
+      box-shadow: 0 0 0 1px rgba(15, 23, 42, 0.9);
+      z-index: 10;
+    }
+
+    .phone-notch::before,
+    .phone-notch::after {
+      content: "";
+      position: absolute;
+      top: 8px;
+      width: 26px;
+      height: 10px;
+      border-radius: 999px;
+      background: radial-gradient(circle at 30% 20%, #4b5563 0, #020617 80%);
+    }
+
+    .phone-notch::before {
+      left: 14px;
+    }
+
+    .phone-notch::after {
+      right: 14px;
+    }
+
+    .phone-screen {
+      position: absolute;
+      inset: 0;
+      padding: 18px 8px 10px;
+    }
+
+    .phone-screen iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 26px;
+      background: #020617;
+      box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.7);
+    }
+
+    .phone-badge {
+      position: absolute;
+      bottom: -40px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 0.75rem;
+      color: #9ca3af;
+      text-align: center;
+      opacity: 0.9;
+    }
+
+    .phone-badge span {
+      color: #a5f3fc;
+    }
+
+    .loading {
+      position: absolute;
+      inset: 18px 8px 10px;
+      display: grid;
+      place-items: center;
+      color: #cbd5e1;
+      font-size: 0.95rem;
+      background: rgba(2, 6, 23, 0.8);
+      border-radius: 26px;
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      pointer-events: none;
+      text-align: center;
+      padding: 24px;
+      line-height: 1.6;
+    }
+
+    .loading strong {
+      display: block;
+      color: #f0f9ff;
+      margin-bottom: 4px;
+      letter-spacing: 0.2px;
+    }
+
+    @media (max-width: 480px) {
+      .phone-shell {
+        width: 100%;
+        max-width: 380px;
+        border-radius: 32px;
+      }
+
+      .phone-inner {
+        border-radius: 26px;
+      }
+
+      .phone-screen iframe {
+        border-radius: 22px;
+      }
+    }
+
+  </style>
+</head>
+<body>
+  <div class="phone-shell">
+    <div class="phone-inner">
+      <div class="phone-notch"></div>
+      <div class="phone-screen">
+        <iframe id="ui-frame" title="Stripe Golf — мобильный интерфейс" loading="lazy"></iframe>
+        <div class="loading" id="loading">
+          <div>
+            <strong>Загружаем макет Stripe Golf…</strong>
+            Если ничего не происходит, откройте файл через GitHub Pages или загрузку RAW.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="phone-badge">
+      Просмотр мобильной версии сервиса <span>Stripe Golf</span><br />
+      Полностью управляемый интерфейс внутри рамки iPhone.
+    </div>
+  </div>
+
+  <template id="ui-fallback">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stripe Golf — мобильный интерфейс</title>
   <style>
@@ -347,7 +527,7 @@
         <span>85%</span>
       </div>
 
-      <div class="top-icons"> 
+      <div class="top-icons">
         <button class="icon-btn" id="messages-btn">💬 Сообщения</button>
         <button class="icon-btn primary" id="news-btn">🔔 Новости</button>
       </div>
@@ -958,6 +1138,40 @@
     renderTournaments();
     const defaultButton = document.querySelector('.nav-btn[data-nav="profile"]');
     setActiveSection('profile', defaultButton);
+  </script>
+</body>
+</html>
+
+</template>
+
+  <script>
+    const frame = document.getElementById('ui-frame');
+    const loader = document.getElementById('loading');
+    const fallbackHtml = document.getElementById('ui-fallback').innerHTML.trim();
+
+    function showFallback() {
+      frame.removeAttribute('src');
+      frame.srcdoc = fallbackHtml;
+      loader.style.display = 'none';
+    }
+
+    async function loadFrame() {
+      try {
+        const response = await fetch('golf_web.html', { cache: 'no-store' });
+        if (!response.ok) {
+          showFallback();
+          return;
+        }
+        const html = await response.text();
+        frame.srcdoc = html && html.trim() ? html : fallbackHtml;
+      } catch (error) {
+        showFallback();
+      } finally {
+        loader.style.display = 'none';
+      }
+    }
+
+    loadFrame();
   </script>
 </body>
 </html>
