--- a/index.html
+++ b/index.html
@@ -2,6 +2,184 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <title>Stripe Golf — Мобильный прототип</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+
+    @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600;700&display=swap");
+
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+    }
+
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      font-family: "Inter", "Manrope", system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
+      background: radial-gradient(circle at 20% 20%, #f5f3ee 0, #e9e2d3 45%, #d9c7a3 90%);
+      color: #151515;
+    }
+
+    .phone-shell {
+      width: 430px;
+      max-width: 100%;
+      aspect-ratio: 430 / 820;
+      border-radius: 42px;
+      background: linear-gradient(145deg, #f5f3ee, #e2ddd2);
+      padding: 6px;
+      box-shadow:
+        0 40px 90px rgba(13, 77, 60, 0.22),
+        0 0 0 1px rgba(201, 163, 91, 0.35);
+      position: relative;
+      display: flex;
+      align-items: stretch;
+      justify-content: stretch;
+    }
+
+    .phone-inner {
+      border-radius: 34px;
+      overflow: hidden;
+      background: #ffffff;
+      flex: 1;
+      position: relative;
+      box-shadow: 0 0 0 1px rgba(13, 77, 60, 0.25);
+    }
+
+    .phone-notch {
+      position: absolute;
+      top: 8px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 160px;
+      height: 26px;
+      border-radius: 16px;
+      background: #0d4d3c;
+      box-shadow: 0 0 0 1px rgba(13, 77, 60, 0.45);
+      z-index: 10;
+    }
+
+    .phone-notch::before,
+    .phone-notch::after {
+      content: "";
+      position: absolute;
+      top: 8px;
+      width: 26px;
+      height: 10px;
+      border-radius: 999px;
+      background: radial-gradient(circle at 30% 20%, #c9a35b 0, #0d4d3c 80%);
+    }
+
+    .phone-notch::before { left: 14px; }
+    .phone-notch::after { right: 14px; }
+
+    .phone-screen {
+      position: absolute;
+      inset: 0;
+      padding: 18px 8px 10px;
+    }
+
+    .phone-screen iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 26px;
+      background: #f5f3ee;
+      box-shadow: inset 0 0 0 1px rgba(13, 77, 60, 0.15);
+    }
+
+    .phone-badge {
+      position: absolute;
+      bottom: -40px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 0.75rem;
+      color: #6b6b6b;
+      text-align: center;
+      opacity: 0.9;
+    }
+
+    .phone-badge span {
+      color: #0d4d3c;
+      font-weight: 700;
+    }
+
+    .loading {
+      position: absolute;
+      inset: 18px 8px 10px;
+      display: grid;
+      place-items: center;
+      color: #151515;
+      font-size: 0.95rem;
+      background: rgba(245, 243, 238, 0.9);
+      border-radius: 26px;
+      border: 1px solid rgba(226, 221, 210, 0.9);
+      pointer-events: none;
+      text-align: center;
+      padding: 24px;
+      line-height: 1.6;
+      box-shadow: 0 12px 30px rgba(13, 77, 60, 0.15);
+    }
+
+    .loading strong {
+      display: block;
+      color: #0d4d3c;
+      margin-bottom: 4px;
+      letter-spacing: 0.2px;
+    }
+
+    @media (max-width: 480px) {
+      .phone-shell {
+        width: 100%;
+        max-width: 380px;
+        border-radius: 32px;
+      }
+
+      .phone-inner {
+        border-radius: 26px;
+      }
+
+      .phone-screen iframe {
+        border-radius: 22px;
+      }
+    }
+</style>
+</head>
+<body>
+  <div class="phone-shell">
+    <div class="phone-inner">
+      <div class="phone-notch"></div>
+      <div class="phone-screen">
+        <iframe id="ui-frame" title="Stripe Golf — мобильный интерфейс" loading="lazy"></iframe>
+        <div class="loading" id="loading">
+          <div>
+            <strong>Загружаем макет Stripe Golf…</strong>
+            Если ничего не происходит, откройте файл через GitHub Pages или загрузку RAW.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="phone-badge">
+      Просмотр мобильной версии сервиса <span>Stripe Golf</span><br />
+      Полностью управляемый интерфейс внутри рамки iPhone.
+    </div>
+  </div>
+
+  <template id="ui-fallback">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stripe Golf — мобильный интерфейс</title>
   <style>
@@ -574,7 +752,7 @@
         <span>85%</span>
       </div>
 
-      <div class="top-icons"> 
+      <div class="top-icons">
         <button class="icon-btn" id="messages-btn">💬 Сообщения</button>
         <button class="icon-btn primary" id="news-btn">🔔 Новости</button>
       </div>
@@ -1185,6 +1363,40 @@
     renderTournaments();
     const defaultButton = document.querySelector('.nav-btn[data-nav="profile"]');
     setActiveSection('profile', defaultButton);
+  </script>
+</body>
+</html>
+
+</template>
+
+  <script>
+    const frame = document.getElementById('ui-frame');
+    const loader = document.getElementById('loading');
+    const fallbackHtml = document.getElementById('ui-fallback').innerHTML.trim();
+
+    function showFallback() {
+      frame.removeAttribute('src');
+      frame.srcdoc = fallbackHtml;
+      loader.style.display = 'none';
+    }
+
+    async function loadFrame() {
+      try {
+        const response = await fetch('golf_web.html', { cache: 'no-store' });
+        if (!response.ok) {
+          showFallback();
+          return;
+        }
+        const html = await response.text();
+        frame.srcdoc = html && html.trim() ? html : fallbackHtml;
+      } catch (error) {
+        showFallback();
+      } finally {
+        loader.style.display = 'none';
+      }
+    }
+
+    loadFrame();
   </script>
 </body>
 </html>
